[package]
name = "img"
version = "0.1.0"
authors = ["Your Name <you@email.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.34"
console_error_panic_hook = "0.1.1"

[dependencies.image]
version = "^0.21.1"
default-features = false
features = ["jpeg","jpeg-decoder","png","png_codec","webp"]

[dependencies.jpeg-decoder]
default-features = false